[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-start"
version = "0.0.4"
authors = [
  { name="Gabor Szabo", email="gabor@szabgab.com" },
]
description = "A command line tool to create flake8 configuration file"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["flake8", "linter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flake8",
    "flake8-pylint",
    "flake8-bugbear",
    "pytest",
]

[project.scripts]
flake8-start = 'flake8_start:cli'

[project.urls]
"Homepage" = "https://github.com/szabgab/flake8-start"
"Bug Tracker" = "https://github.com/szabgab/flake8-start/issues"
